# games-agent

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
games_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: launch_training_script.sh
src/: setup.py
src/games_agent/: agent.py
src/games_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/games_agent/configs/: training_config.yaml
src/games_agent/environment/: board.py
src/games_agent/scripts/: run_one_step_trial.py  run_train.py
src/project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_agent.py
tests/environment/: test_board.py
